update properties encoding